@@ -501,3 +501,4 @@
   - bugfix:  sunrise stuff fixed, doc missing
   - feature: CUL FHT sending added
   - bugfix:  workaround to make M232 counter wraparound
+  - feature: Google Weather API support form FHEM (Boris 2009-06-01)
